cmake_minimum_required(VERSION 3.19)
project(WakeUpAtDawn LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

# --------------------------------------------------
# ๐น ุฅุนุฏุงุฏ ุงูุฃููููุฉ (Windows ููุท)
# --------------------------------------------------
if(WIN32)
    # ููู .rc ูุงุฒู ูุดูุฑ ูุฃููููุฉ .ico
    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_SOURCE_DIR}/icons/app_icon.rc")
endif()

# --------------------------------------------------
# ๐น ุงููููุงุช ุงูุชูููุฐูุฉ
# --------------------------------------------------
qt_add_executable(WakeUpAtDawn
    main.cpp
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    resources.qrc
    stb_image.cpp
    Filters.h
    ${APP_ICON_RESOURCE_WINDOWS} # โ ููู ุฌุฏูุง
)

# ๐ข ุฅูุบุงุก ุธููุฑ ูุงูุฐุฉ ุงูู CMD
set_target_properties(WakeUpAtDawn PROPERTIES WIN32_EXECUTABLE TRUE)


# --------------------------------------------------
# โ ูุณุฎ ููู QSS
# --------------------------------------------------
configure_file(${CMAKE_SOURCE_DIR}/styles.qss
               ${CMAKE_BINARY_DIR}/styles.qss COPYONLY)

# โ ูุณุฎ ูุฌูุฏ ุงูุฃููููุงุช ุจุนุฏ ุงูุจูุงุก
add_custom_command(TARGET WakeUpAtDawn POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_SOURCE_DIR}/icons"
            "${CMAKE_BINARY_DIR}/icons"
    COMMENT "๐ Copying icons to build folder..."
)

# --------------------------------------------------
# ๐น ุฑุจุท ููุชุจุงุช Qt
# --------------------------------------------------
target_link_libraries(WakeUpAtDawn
    PRIVATE Qt::Core Qt::Widgets
)

# --------------------------------------------------
# ๐น ุฅุนุฏุงุฏุงุช ุงูุชุซุจูุช
# --------------------------------------------------
include(GNUInstallDirs)
install(TARGETS WakeUpAtDawn
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
